Fixed whitespace bug on mobile cucc page

--- a/css/cucc.css
+++ b/css/cucc.css
@@ -22,8 +22,8 @@ body {
 .text-vertical-center h1 {
     margin: 0;
     padding: 0;
-    font-size: 4.5em;
-    font-weight: 700;
+    font-size: 3.5em;
+    font-weight: 600;
 }
 
 /* Custom Button Styles */
